# kcmt

./: .coverage  .coveragerc  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  README.tmp  SECURITY.md  __init__.py  pyproject.toml  pytest.ini
.brute/hooks/: events.jsonl
.githooks/: commit-msg
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependency-advisor.yml  keystone-assimilation.yml  release-notes.yml  rust-canary-smoke.yml  rust-parity-matrix.yml
.kcmt/: config.json  env.example  last_run.json
.kcmt/benchmarks/: benchmark-2025-10-03T145836Z.json  benchmark-2025-10-03T153625Z.json  benchmark-2025-10-03T163932Z.json  benchmark-2025-10-03T170508Z.json  benchmark-2025-10-03T171337Z.json  benchmark-2025-10-03T171806Z.json
.keystone/: assimilation.yaml
.serena/: project.yml
.serena/memories/: overview.md  style.md  suggested_commands.md  task_completion.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: benchmark.md  gpt-token-efficiency.md  homebrew.md  rust-migration-rollout.md
docs/performance/: rust-fastest-commit-tool-iterations.md
docs/superpowers/specs/: 2026-06-08-kcmt-python-rename-design.md
features/: rust_fast_commit_tool.feature
kcmt/: __init__.py  benchmark.py  cli.py  commit.py  config.py  core.py  git.py  ink_backend.py  legacy_cli.py  llm.py  main.py
kcmt-homebrew/Formula/: kcmt.rb
kcmt/providers/: anthropic_driver.py  base.py  openai_driver.py  pricing.py  xai_driver.py
kcmt/ui/ink/: index.mjs  package.json
kcmt/ui/ink/src/: app.mjs  (+1 more)
keystone/tools/assimilation/: run.py  states.py
legacy/kcmt-python/kcmt_python/: __init__.py  benchmark.py  cli.py  commit.py  config.py  core.py  exceptions.py  git.py  ink_backend.py  legacy_cli.py  llm.py  main.py
rust/: Cargo.toml
rust/crates/kcmt-bench/: Cargo.toml
rust/crates/kcmt-bench/src/: export.rs  lib.rs  model.rs  quality.rs  runner.rs  scoreboard.rs
rust/crates/kcmt-cli/: Cargo.toml
rust/crates/kcmt-cli/src/: args.rs  lib.rs
rust/crates/kcmt-cli/src/commands/: benchmark.rs  configure.rs  history.rs  mod.rs  model_discovery.rs  stats.rs  status.rs  workflow.rs
rust/crates/kcmt-cli/tests/: benchmark_contracts.rs  configure_contracts.rs  live_llm_matrix.rs  status_contracts.rs  workflow_modes.rs
rust/crates/kcmt-core/: Cargo.toml
rust/crates/kcmt-core/src/: error.rs  lib.rs  message.rs  model.rs  preferences.rs  selector.rs  telemetry.rs
rust/crates/kcmt-core/src/config/: loader.rs  mod.rs  persisted.rs  workflow_config.rs
rust/crates/kcmt-core/src/git/: commit_file.rs  gitoxide_readonly.rs  mod.rs  repo.rs  runner.rs
rust/crates/kcmt-core/src/metrics/: timing.rs
rust/crates/kcmt-core/src/workflow/: atomic_failure_recovery.rs  changeset.rs  commit_flow.rs  mod.rs  provider_dispatch.rs  quality.rs  scheduler.rs  telemetry.rs
rust/crates/kcmt-provider/: Cargo.toml
rust/crates/kcmt-provider/src/: error_map.rs  lib.rs  profile.rs  registry.rs  transport.rs
rust/crates/kcmt-provider/src/clients/: anthropic.rs  github.rs  mod.rs  openai.rs  xai.rs
rust/crates/kcmt-tui/: Cargo.toml
rust/crates/kcmt-tui/src/: lib.rs
rust/tests/: README.md
rust/tests/contract/: cli_contract.rs  us1_cli_aliases.trycmd  us1_legacy_flags.trycmd  us2_config_precedence.rs  us3_benchmark_schema.rs
rust/tests/integration/: us1_file_scoped_commit.rs  us1_no_changes_behavior.rs  us1_staged_commit.rs  us2_invalid_credentials.rs  us2_legacy_config_values.rs  us2_provider_failure_modes.rs  us2_provider_fallback.rs  us3_benchmark_outputs.rs  us3_oversized_diff_limits.rs
rust/tests/parity/: parity_runner.rs  us3_performance_baseline.rs
scripts/: __init__.py  sync_homebrew_formula.py
scripts/benchmark/: generate_uncommitted_repo.py
scripts/canary/: runtime_canary_probe.py
specs/001-rust-parity-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-validation.md  tasks.md
specs/001-rust-parity-migration/checklists/: requirements.md
specs/001-rust-parity-migration/contracts/: benchmark-result.schema.json  cli-contract.md  config-contract.md
specs/001-rust-parity-migration/validation/: exit-error-baseline.md  high-usage-workflows.md  regression-corpus.md
specs/002-rust-canary-rollout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-validation.md  tasks.md
specs/002-rust-canary-rollout/contracts/: canary-probe-contract.md  runtime-trace.schema.json
specs/003-bring-rust-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-validation.md  tasks.md
specs/003-bring-rust-cli/contracts/: runtime-benchmark.schema.json  workflow-parity-contract.md
specs/004-ink-progress-telemetry/: plan.md  spec.md  tasks.md
specs/005-rust-fastest-commit-tool/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_anthropic_provider.py  test_auto_push.py  test_auto_push_persist.py  test_benchmark.py  test_cli.py  test_cli_auto_push_display.py  test_cli_legacy_constructor.py  test_cli_smoke_openai.py  test_commit.py  test_config.py  test_config_auto_detect.py  test_core_diff_progress.py  test_core_parse_types.py  test_core_retry_and_fallback.py  test_deletion_diff_path.py  test_deletion_workflow.py  test_dependency_advisor_workflow_bdd.py  test_exceptions.py  test_fallback_after_retries.py  test_fallback_heuristic.py  test_generate_uncommitted_repo.py  test_git.py  test_homebrew_release_bdd.py  test_ignored_files_skipped.py  test_init.py  test_ink_backend.py  test_llm.py  test_llm_branches.py  test_llm_helpers.py  test_llm_openai_integration.py  test_llm_openai_stub.py  test_llm_openai_stub_clean.py  test_main_entrypoint.py  test_meta_skip.py  test_multi_file_commits.py  test_push_failure.py  test_python_runtime_telemetry.py  test_runtime_canary_probe.py  test_rust_fast_commit_tool_bdd.py  (+3 more)
tests/features/: dependency_advisor_workflow.feature  homebrew_release.feature  rust_workflow_parity.feature
tmp-config-test/.kcmt/: config.json
tmp-config-test2/.kcmt/: config.json
tmp-config-test3/.kcmt/: config.json
(+26 files in other folders)
