[package]
name = "kcmt-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core workflow and domain logic for kcmt Rust migration."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
gix.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
