[package]
name = "kcmt-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Optional Ratatui-driven interactive mode for kcmt."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
ratatui = "0.29"
tracing.workspace = true
