[package]
name = "kcmt-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Optional Ratatui-driven interactive mode for kcmt."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
crossterm = "0.29"
ratatui = "0.29"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
